// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EpisodeCard should match the snapshot 1`] = `
<a
  className="css-3tqedt"
  href="/episode/1"
  onClick={[Function]}
>
  <div
    className="css-1v8ruy6"
  >
    <img
      alt="Test Episode"
      className="css-5y3q7n"
      src="http://example.com/medium.jpg"
    />
  </div>
  <div
    className="css-14mp7s"
  >
    <div
      className="css-tqpnt9"
    >
      Test Episode
    </div>
    <p
      className="css-juyb0m"
    >
      This is a test summary.
    </p>
  </div>
</a>
`;

exports[`EpisodeCard should render an image when the episode has an image URL 1`] = `
<DocumentFragment>
  <a
    class="css-3tqedt"
    href="/episode/1"
  >
    <div
      class="css-1v8ruy6"
    >
      <img
        alt="Test Episode"
        class="css-5y3q7n"
        src="http://example.com/medium.jpg"
      />
    </div>
    <div
      class="css-14mp7s"
    >
      <div
        class="css-tqpnt9"
      >
        Test Episode
      </div>
      <p
        class="css-juyb0m"
      >
        This is a test summary.
      </p>
    </div>
  </a>
</DocumentFragment>
`;
